--- a/DPCAS/greeting/templates/greetbase.html
+++ b/DPCAS/greeting/templates/greetbase.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Doctors Signin</title>
+    <title>paitient Signin</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body class="d-flex flex-column min-vh-100 " style="background-color: #f9f8f8">
+  <body class="d-flex flex-column min-vh-100" style="background-color: #f9f8f8">
     <header class="text-bg-primary p-1">
       <a href="{% url 'index' %}" class="btn">
         <div class="mx-4">
@@ -28,7 +28,7 @@
     </div>
     </main>
     <footer
-      class="text-bg-primary p-4 mt-auto"
+      class="text-bg-primary p-4 mt-auto d-flex justify-content-end"
       style="
         height: 100%;
         background-image: url({% static '/imgs/hfbanner.jpeg'%});
@@ -36,7 +36,13 @@
         background-repeat: no-repeat;
         background-position: 50%;
       "
-    ></footer>
+    >
+  <a href="{% url 'admin-signin' %}" class="btn">
+        <div class="mx-4">
+          <i class="fa-sharp fa-solid fa-inverse fa-user-tie"></i>
+        </div>
+      </a>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
