--- a/DPCAS/adminstration/templates/adminbase.html
+++ b/DPCAS/adminstration/templates/adminbase.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>DPCAS</title>
+  <title>DPCAS admin page</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
 </head>
@@ -19,7 +19,7 @@
             <a class="nav-link d-flex justify-content-center" aria-current="page" href="{% url 'index' %}">HOME</a>
           </div>
           <div class="nav-item my-3 mx-5 px-1">
-            <a class="nav-link d-flex justify-content-center" href="#">SEE ALL PATIENTS</a>
+            <a class="nav-link d-flex justify-content-center" href="{% url 'plist' %}">SEE ALL PATIENTS</a>
           </div>
           <div class="nav-item my-3 mx-5 px-1">
             <a class="nav-link d-flex justify-content-center" href="{% url 'psignup' %}">ADD A PATIENT</a>
@@ -52,7 +52,7 @@
               </a>
             </div>
             <div class="col d-flex nav-item justify-content-center" style="width: 400px">
-              <a class="nav-link text-bg-primary" href="#">SEE ALL PATIENTS</a>
+              <a class="nav-link text-bg-primary" href="{% url 'plist' %}">SEE ALL PATIENTS</a>
             </div>
 
             <div class="col nav-item" style="width: 400px">
