--- a/DPCAS/adminstration/templates/adminhome.html
+++ b/DPCAS/adminstration/templates/adminhome.html
@@ -1,11 +1,11 @@
 {% extends 'adminbase.html' %} 
 {% load static %}
 {% block content %}
-<div class="text-center p-5 align-items-center justify-content-center">
-  <div class="fs-6">
+<div class="text-center p-2 align-items-center justify-content-center">
+  <div class="fs-6 p-5">
     Doctor and Patient Concultancy and Hospital Appointment Scheduler
   </div>
-  <div class="col fs-5 p-5">
+  <div class="col fs-5 ">
     ADMIN PAGE
   </div>
 </div>
