--- a/DPCAS/greeting/templates/greetbase.html
+++ b/DPCAS/greeting/templates/greetbase.html
@@ -25,7 +25,8 @@
       <div class="wrapper">
         {% block content %} 
         {% endblock %}
-    </div>
+      </div>
+    
     </main>
     <footer
       class="text-bg-primary p-4 mt-auto d-flex justify-content-end"
@@ -37,7 +38,7 @@
         background-position: 50%;
       "
     >
-  <a href="{% url 'admin-signin' %}" class="btn">
+  <a href="{% url 'admin-index' %}" class="btn">
         <div class="mx-4">
           <i class="fa-sharp fa-solid fa-inverse fa-user-tie"></i>
         </div>
