--- a/DPCAS/adminstration/templates/asignin.html
+++ b/DPCAS/adminstration/templates/asignin.html
@@ -1,6 +1,6 @@
 {% extends 'greetbase.html' %} {% load static %} {% block content %}
 <div
-  class="row align-items-center text-center mx-5 px-md-4 d-flex justify-content-center"
+  class="row align-items-center text-center mx-5 p-md-4 d-flex justify-content-center"
 >
   <div class="col d-flex justify-content-center">
     <img src="{% static 'imgs/admin.svg'%}" style="max-height: 250px" />
@@ -8,37 +8,31 @@
 
   <div class="col d-flex justify-content-center my-5">
     <div class="shadow p-2 p-sm-3" style="width: 100%">
-      <form class="my-4">
+      <form class="my-4" method="POST">
+        
+        {% if login_form.non_field_errors %}
+        <div
+          class="alert alert-warning alert-dismissible fade show"
+          role="alert"
+        >
+        
+          <small>{{ login_form.non_field_errors }}</small>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="alert"
+            aria-label="Close"
+          ></button>
+        </div>
+        {% endif %}
+        {% csrf_token %} {% for field in login_form %}
         <div class="row mb-5 d-flex flex-wrap justify-content-center">
           <div class="col-lg-4">
-            <label for="paitient-tel" class="form-label">email</label>
+            <label class="form-label">{{field.label_tag}}</label>
           </div>
-          <div class="col-lg-8">
-            <input
-              type="tel"
-              class="form-control"
-              id="paitient-tel"
-              aria-describedby="emailHelp"
-            />
-          </div>
+          <div class="col w-100">{{ field }}</div>
         </div>
-        <div class="row mb-5 d-flex flex-wrap justify-content-center">
-          <div class="col-lg-4 d-flex justify-content-center">
-            <label
-              for="paitient-password"
-              class="col form-label d-flex justify-content-center"
-              style="width: 50%"
-              >Password</label
-            >
-          </div>
-          <div class="col-lg-8">
-            <input
-              type="password"
-              class="col form-control"
-              id="paitient-password"
-            />
-          </div>
-        </div>
+        {% endfor %}
         <button type="submit" class="btn btn-primary">Sign in</button>
       </form>
     </div>
