--- a/DPCAS/adminstration/templates/plist.html
+++ b/DPCAS/adminstration/templates/plist.html
@@ -8,7 +8,7 @@
 </div>
 
 <div class="row align-items-center mx-5 d-flex justify-content-center">
-    <table class="table table-hover" style="font-family:cursive">
+    <table class="table table-hover" style="font-family:Sans-serif">
         <thead class="table-dark">
           <tr>
             <th scope="col">#</th>
@@ -36,7 +36,19 @@
                     
                     <th>{{ patient.email }}</th>
                     <th>{{ patient.date_registered }}</th>
-                    <th>{{ patient.is_active }}</th>
+                    <th>
+                      {% if patient.is_active == True %}
+                        <div class="form-check">
+                          <input class="form-check-input" type="checkbox" value="" id="flexCheckCheckedDisabled" checked disabled>
+                        </div>
+                      {% endif %}
+                      {% if patient.is_active == False %}
+                        <div class="form-check">
+                          <input class="form-check-input" type="checkbox" value="" id="flexCheckDisabled" disabled>
+                        </div>
+                      {% endif %}
+                      
+                    </th>
                     <th>{{ patient.last_login }}</th>
                 </tr>
             {% endfor %}
