--- a/DPCAS/adminstration/templates/dman.html
+++ b/DPCAS/adminstration/templates/dman.html
@@ -9,7 +9,7 @@
 <div class="row align-items-center text-center mx-5 p-5 d-flex justify-content-center">
   <div class="col p-4 d-flex justify-content-center">
     <!-- for now i have used the a tag -->
-    <a href="./dsignin.html" class="btn" style="width: fit-content">
+    <a href="{% url 'dlist' %}" class="btn" style="width: fit-content">
       <div class="border">
         <div class="text-bg-primary py-3 h-5">SEE ALL DOCTORS</div>
         <div>
@@ -21,7 +21,7 @@
 
   <div class="col p-4 d-flex justify-content-center">
     <!-- for now i have used the a tag -->
-    <a href="./dsignin.html" class="btn" style="width: fit-content">
+    <a href="{% url 'dsignup' %}" class="btn" style="width: fit-content">
       <div class="border">
         <div class="text-bg-primary py-3 h-5">ADD A DOCTOR</div>
         <div>
