tried some more

--- a/DPCAS/adminstration/templates/asignin.html
+++ b/DPCAS/adminstration/templates/asignin.html
@@ -1,9 +1,9 @@
 {% extends 'greetbase.html' %} {% load static %} {% block content %}
 <div
-  class="row align-items-center text-center mx-5 p-md-4 d-flex justify-content-center"
+  class="row align-items-center text-center mx-md-5 p-md-4 d-flex justify-content-center"
 >
   <div class="col d-flex justify-content-center">
-    <img src="{% static 'imgs/admin.svg'%}" style="max-height: 250px" />
+    <img src="{% static 'imgs/admin.svg'%}" style="max-height: 250px; max-width:200px" />
   </div>
 
   <div class="col d-flex justify-content-center my-5">
