--- a/DPCAS/adminstration/templates/dman.html
+++ b/DPCAS/adminstration/templates/dman.html
@@ -6,7 +6,7 @@
     What do you want to do?
   </div>
 </div>
-<div class="row align-items-center text-center mx-5 p-5 d-flex justify-content-center">
+<div class="row align-items-center text-center mx-5 px-5 d-flex justify-content-center">
   <div class="col p-4 d-flex justify-content-center">
     <!-- for now i have used the a tag -->
     <a href="{% url 'dlist' %}" class="btn" style="width: fit-content">
