--- a/DPCAS/greeting/templates/index.html
+++ b/DPCAS/greeting/templates/index.html
@@ -15,10 +15,10 @@
 </div>
 
 <div
-  class="row align-items-center text-center mx-5 px-4 d-flex justify-content-center"
+  class="row align-items-center text-center mx-md-5 px-4 d-flex justify-content-center"
 >
 
-  <div class="col m-5 d-flex justify-content-center">
+  <div class="col my-2 m-md-3 d-flex justify-content-center">
     <a href="{% url 'psignin' %}" class="btn text-bg-primary " style="width: 50%; height:100%">
         <div class="text-bg-primary p-3 h-5">Sign in</div>
     </a>
