--- a/DPCAS/adminstration/templates/adminbase.html
+++ b/DPCAS/adminstration/templates/adminbase.html
@@ -5,6 +5,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="shortcut icon" type="image/png" href="{% static 'imgs/icons/favico.png' %}"/>
   <title>DPCAS admin page</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
@@ -14,7 +15,7 @@
   <header class="text-bg-primary p-2">
     <nav class="navbar navbar-expand-lg">
       <div class="collapse" id="navbarToggleExternalContent">
-        <div class="px-1 py-1">
+        <div class="px-5 py-1">
           <div class="nav-item my-3 mx-5 px-5">
             <a class="nav-link d-flex justify-content-center" aria-current="page" href="{% url 'admin-index' %}">HOME</a>
           </div>
@@ -34,7 +35,7 @@
         </div>
       </div>
       <nav class="navbar bg-primary">
-        <div class="container-fluid">
+        <div class="container">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -101,7 +102,7 @@
     {% block content %}
     {% endblock %}
   </main>
-  <footer class="text-bg-primary p-4 mt-auto d-flex justify-content-end" style="
+  <footer class=" text-bg-primary p-4 mt-auto d-flex justify-content-end" style="
         height: 100%;
         background-image: url({% static 'imgs/hfbanner.jpeg' %});
         background-size: cover;
