--- a/DPCAS/adminstration/templates/adminhome.html
+++ b/DPCAS/adminstration/templates/adminhome.html
@@ -1,16 +1,14 @@
-{% extends 'adminbase.html' %} 
-{% load static %}
-{% block content %}
+{% extends 'adminbase.html' %} {% load static %} {% block content %}
 <div class="text-center p-2 align-items-center justify-content-center">
-  <div class="fs-6 p-5">
+  <div class="fs-5 p-4">
     Doctor and Patient Concultancy and Hospital Appointment Scheduler
-  </div>
-  <div class="col fs-5 ">
+    <br />
+    <br />
     ADMIN PAGE
   </div>
 </div>
 <div
-  class="row align-items-center text-center m-4 px-4 d-flex justify-content-center"
+  class="row align-items-center text-center m-3 px-4 d-flex justify-content-center"
 >
   <div class="col d-flex justify-content-center">
     <!-- for now i have used the a tag -->
@@ -28,7 +26,7 @@
   </div>
 
   <div
-    class="col col-lg-1 d-flex fs-4 py-5 align-items-center justify-content-center contanier"
+    class="col col-md-1 d-flex fs-4 py-5 align-items-center justify-content-center contanier"
     style="min-width: 30%"
   >
     Manage
