--- a/DPCAS/adminstration/templates/psignup.html
+++ b/DPCAS/adminstration/templates/psignup.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 <Span class="d-flex justify-content-center">
-<div class="col col-md-6 shadow justify-content-center p-2 m-5">
+<div class="col col-md-6 shadow justify-content-center p-2 my-5 mx-md-5">
     <span class=" fs-1 m-1 d-flex justify-content-center" style="width:50% margin:right:10%">
         <h1>ADD NEW PATIENT</h1>
     </span>
@@ -32,7 +32,7 @@
                 </p>
             {% endfor %}
 
-            <div class="d-flex justify-content-end">
+            <div class="d-flex justify-content-center m-5">
                 <button class="btn text-bg-primary">Register</button>
             </div>
             
