--- a/DPCAS/patientview/templates/pbase.html
+++ b/DPCAS/patientview/templates/pbase.html
@@ -6,27 +6,27 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="shortcut icon" type="image/png" href="{% static 'imgs/icons/favico.png' %}"/>
   <title>DPCAS</title>
+  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
 </head>
 
 <body class="d-flex flex-column min-vh-100" style="background-color: #f9f8f8">
-  <header class="text-bg-primary p-2">
+  <header class="text-bg-primary p-1">
     <nav class="navbar navbar-expand-lg">
       <div class="collapse" id="navbarToggleExternalContent">
-        <div class="px-1 py-1">
+        <div class="px-5 py-1">
           <div class="nav-item my-3 mx-5 px-5">
             <a class="nav-link d-flex justify-content-center" aria-current="page" href="{% url 'pview' %}">HOME</a>
           </div>
           <div class="nav-item my-3 mx-5 px-1">
-            <a class="nav-link d-flex justify-content-center" href="#">CONSULT A DOCTOR</a>
+            <a class="nav-link d-flex justify-content-center" href="#">
+              CONSULT A DOCTOR</a>
           </div>
           <div class="nav-item my-3 mx-5 px-1">
-            <a class="nav-link d-flex justify-content-center" href="#">SET AN APPOINTMENT</a>
-          </div>
-          <div class="nav-item my-3 mx-5 px-1">
-            <a class="nav-link d-flex justify-content-center" href="#">YOUR LAB RESULTS</a>
+            <a class="nav-link d-flex justify-content-center" href="{%url 'appointment'%}">SET AN APPOINTMENT</a>
           </div>
         </div>
       </div>
@@ -49,22 +49,23 @@
               </a>
             </div>
             <div class="col d-flex nav-item justify-content-center" style="width: 400px">
-              <a class="nav-link text-bg-primary" href="#">CONSULT A DOCTOR</a>
+              <a class="nav-link text-bg-primary" href="#">
+                <i class="fa-solid fa-comments mx-2"></i>
+                CONSULT A DOCTOR</a>
             </div>
 
             <div class="col nav-item" style="width: 400px">
-              <a class="nav-link text-bg-primary" href="#">SET AN APPOINTMENT</a>
+              <a class="nav-link text-bg-primary" href="{% url 'appointment'%}">
+                <i class="fa-solid fa-calendar-check mx-2"></i>
+                SET AN APPOINTMENT</a>
             </div>
 
-            <div class="col nav-item">
-              <a class="nav-link text-bg-primary" href="#">YOUR LAB RESULTS</a>
-            </div>
           </ul>
         </div>
       </div>
       <div class="col-2 d-flex justify-content-center mx-2">
         
-          Hello, USERNAME
+          Hello,Username
         
       </div>
       <div class="col-1 d-flex justify-content-center mx-1">
