--- a/DPCAS/patientview/templates/ppage.html
+++ b/DPCAS/patientview/templates/ppage.html
@@ -2,14 +2,14 @@
 {% load static %}
 {% block content %}
 <div class="row m-2">
-  <div class="d-flex justify-content-center text-center fs-1 my-4">
+  <div class="d-flex justify-content-center text-center fs-1 my-3">
     What do you want to do?
   </div>
 </div>
 <div class="row align-items-center text-center mx-5 p-5 d-flex justify-content-center">
   <div class="col p-4 d-flex justify-content-center">
     <!-- for now i have used the a tag -->
-    <a href="./dsignin.html" class="btn" style="width: fit-content">
+    <a href="{% url 'consult' 'lobby'%}" class="btn" style="width: fit-content">
       <div class="border">
         <div class="text-bg-primary py-3 h-5">CONSULT DOCTOR</div>
         <div>
@@ -21,22 +21,11 @@
 
   <div class="col p-4 d-flex justify-content-center">
     <!-- for now i have used the a tag -->
-    <a href="./dsignin.html" class="btn" style="width: fit-content">
+    <a href="{% url 'appointment'%}" class="btn" style="width: fit-content">
       <div class="border">
         <div class="text-bg-primary py-3 h-5">SET AN APPOINTMENT</div>
         <div>
           <img src="{% static 'imgs/appointments.svg' %}" style="height: 180px; max-width: 180px" />
-        </div>
-      </div>
-    </a>
-  </div>
-
-  <div class="col p-4 d-flex justify-content-center">
-    <a href="./psignin.html" class="btn" style="width: fit-content">
-      <div class="border">
-        <div class="text-bg-primary p-3 h-5">LAB RESULTS</div>
-        <div>
-          <img src="{% static 'imgs/lab.svg' %}" class="align-items-end" style="height: 180px; max-width: 183px" />
         </div>
       </div>
     </a>
